--- a/index.html
+++ b/index.html
@@ -30,7 +30,14 @@
         <li>Fuente de 12V</li>
     </ul>
 </section>
+<section>
+    <h2>Prototipo de la Banda Transportadora</h2>
 
+    <img src="img/2a6d726d-95f0-4a2f-bd70-2aabd670a40f.jpeg" width="300">
+    <img src="img/0ccdb5d4-5e53-4d9c-8568-32bb43437ec0.jpeg" width="300">
+    <img src="img/d50678f2-3dfb-445e-b857-39cbbb1a63c0.jpeg" width="300">
+</section>
+    
 <section>
     <h2>Conclusiones</h2>
     <p>
