--- a/index.html
+++ b/index.html
@@ -37,6 +37,48 @@
     <img src="img/0ccdb5d4-5e53-4d9c-8568-32bb43437ec0.jpeg" width="300">
     <img src="img/d50678f2-3dfb-445e-b857-39cbbb1a63c0.jpeg" width="300">
 </section>
+    <section>
+    <h2>Código Arduino</h2>
+    <pre>
+#define DIR 2
+#define STEP 3
+#define ENABLE 4
+#define JOYSTICK A0
+
+int zonaMuertaMin = 400;
+int zonaMuertaMax = 624;
+
+void setup() {
+  pinMode(DIR, OUTPUT);
+  pinMode(STEP, OUTPUT);
+  pinMode(ENABLE, OUTPUT);
+  digitalWrite(ENABLE, HIGH);
+}
+
+void loop() {
+  int lectura = analogRead(JOYSTICK);
+
+  if (lectura < zonaMuertaMin) {
+    digitalWrite(ENABLE, LOW);
+    digitalWrite(DIR, LOW);
+    moverMotor(500);
+  } else if (lectura > zonaMuertaMax) {
+    digitalWrite(ENABLE, LOW);
+    digitalWrite(DIR, HIGH);
+    moverMotor(500);
+  } else {
+    digitalWrite(ENABLE, HIGH);
+  }
+}
+
+void moverMotor(int delayMicros) {
+  digitalWrite(STEP, HIGH);
+  delayMicroseconds(delayMicros);
+  digitalWrite(STEP, LOW);
+  delayMicroseconds(delayMicros);
+}
+    </pre>
+</section>
     
 <section>
     <h2>Conclusiones</h2>
