--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <h1>Sistema de Transporte para Estación de Picking</h1>
     <p>Control de Banda Transportadora mediante Joystick</p>
 </header>
+    
+<section>
+    <h2>Prototipo de la Banda Transportadora</h2>
+
+    <h3>Integrantes del equipo</h3>
+    <ul>
+        <li>Morales Romero Angel Emiliano</li>
+        <li>Ramírez Gómez Juan Adrián</li>
+        <li>Robles Mendieta Donnovan Fernando</li>
+    </ul>
+</section>
 
 <section>
     <h2>Concepto del Proyecto</h2>
